--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Yasiru</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -42,8 +42,8 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">Yasiru Udana</h1>
+        <p class="section__text__p2">Software Engineering Student</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
