--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Yasiru Udana</h1>
-        <p class="section__text__p2">Software Engineering Student</p>
+        <p class="section__text__p2">Software Engineering Undergraduate</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/yasiruUdana.pdf')"
           >
             Download CV
           </button>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic.jpg"
             alt="Profile picture"
             class="about-pic"
           />
