--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>8+ projects <br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
