--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.jpg" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>8+ projects <br />Frontend Development</p>
+              <p>8+ projects <br />Frontend Development <br/>Backend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>BEng (Hons) Software Engineering - Staffordshire University<br/>Foundation Certificate in IT - Curtin University <br/> </p>
             </div>
           </div>
           <div class="text-container">
