--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>8+ projects <br />Frontend Development <br/>Backend Development</p>
+              <p>8+ projects <br />Frontend Development <br/>Backend Development <br/>Web/Mobile</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,13 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BEng (Hons) Software Engineering - Staffordshire University<br/>Foundation Certificate in IT - Curtin University <br/> </p>
+              <p>BEng (Hons) Software Engineering - Staffordshire University(Undergraduate)<br/>Foundation Certificate in IT - Curtin University <br/>Mahinda College</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              "As a passionate software engineering student, my love for coding, problem solving, and mathematics propels my pursuit of excellence. I thrive on crafting elegant solutions, optimizing processes, and innovating in the ever-evolving software landscape. Committed to harnessing technology, I eagerly embrace the journey of turning ideas into reality."
+
             </p>
           </div>
         </div>
@@ -352,7 +348,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:yasiruudana1999@gmail.com">yasiruudana1999@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -375,7 +371,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Yasiru Udana. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
