--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.jpg"
+            src="./assets/penguin-catscafedrink1.gif"
             alt="Profile picture"
             class="about-pic"
           />
@@ -105,7 +105,7 @@
           </div>
           <div class="text-container">
             <p>
-              "As a passionate software engineering student, my love for coding, problem solving, and mathematics propels my pursuit of excellence. I thrive on crafting elegant solutions, optimizing processes, and innovating in the ever-evolving software landscape. Committed to harnessing technology, I eagerly embrace the journey of turning ideas into reality."
+              "As an ardent software engineering student with a fiery passion for shaping the digital world, my love for coding, problem-solving, and the art of mathematics fuels my unwavering quest for excellence. I relish the exhilaration of weaving intricate code tapestries, fine-tuning processes, and riding the ever-shifting waves of software evolution. I'm resolutely committed to the enchanting art of crafting innovative, user-friendly mobile and web applications, eagerly turning imaginative ideas into functional realities."
 
             </p>
           </div>
@@ -118,7 +118,9 @@
         onclick="location.href='./#experience'"
       />
     </section>
+   
     <section id="experience">
+      
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
@@ -167,35 +169,69 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>PHP</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Flutter</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Tailwind</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Bootstrap</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -204,7 +240,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>MongoDB</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Oracle SQL</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -226,6 +273,17 @@
                   class="icon"
                 />
                 <div>
+                  <h3>MySQL</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>Express JS</h3>
                   <p>Intermediate</p>
                 </div>
@@ -237,7 +295,40 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Express JS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Laravel</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Firebase</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Hive</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -269,7 +360,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/yasiru2077'"
               >
                 Github
               </button>
@@ -277,7 +368,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+              Repositories
               </button>
             </div>
           </div>
