--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Agrotech</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -366,7 +366,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/yasiru2077/Agrotech'"
               >
               Repositories
               </button>
