--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">StyleLounge</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -392,7 +392,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+              Repositories
               </button>
             </div>
           </div>
@@ -416,7 +416,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+              Repositories
               </button>
             </div>
           </div>
