--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/edulanka.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -366,9 +366,9 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yasiru2077/Agrotech'"
+                onclick="location.href='https://agro-yasiru.surge.sh/'"
               >
-              Repositories
+              Demo
               </button>
             </div>
           </div>
@@ -399,7 +399,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/edulanka4.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -447,10 +447,12 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/yasiru-udana-6a71b6265/">LinkedIn</a></p>
         </div>
       </div>
+      <div class="final"><img class="bye" src="./assets/catscafe-penguin run.gif" alt=""></div>
     </section>
+    
     <footer>
       <nav>
         <div class="nav-links-container">
