--- a/index.html
+++ b/index.html
@@ -449,8 +449,15 @@
           />
           <p><a href="https://www.linkedin.com/in/yasiru-udana-6a71b6265/">LinkedIn</a></p>
         </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/square-instagram.svg"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://instagram.com/yasiruu.u?igshid=MzRlODBiNWFlZA==">Instagram</a></p>
+        </div>
       </div>
-      <div class="final"><img class="bye" src="./assets/catscafe-penguin run.gif" alt=""></div>
     </section>
     
     <footer>
